ProblemStatement1/wisecow/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: <your-docker-registry>/wisecow:latest
          ports:
            - containerPort: 3000
