ProblemStatement1/wisecow/wisecow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - wisecow.example.com  # Replace with your domain
      secretName: tls-secret
  rules:
    - host: wisecow.example.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 443  # Ensure this matches the port specified in wisecow-service.yaml
